--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,36 +5,38 @@ on: [push]
 jobs:
   build-mac:
     runs-on: macos-latest
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_13.0.app
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Build the app
-      run: swift build -c release
+      - name: Build the app
+        run: swift build -c release
 
-    - name: Run tests
-      run: swift test
-    
-    - name: Archive binary
-      uses: actions/upload-artifact@v1
-      with:
-        name: postman-mac
-        path: .build/release/Postman
-  
+      - name: Run tests
+        run: swift test
+
+      - name: Archive binary
+        uses: actions/upload-artifact@v1
+        with:
+          name: postman-mac
+          path: .build/release/Postman
+
   build-linux:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Build the app
-      run: swift build -c release
+      - name: Build the app
+        run: swift build -c release
 
-    - name: Run tests
-      run: swift test
-    
-    - name: Archive binary
-      uses: actions/upload-artifact@v1
-      with:
-        name: postman-linux
-        path: .build/release/Postman
+      - name: Run tests
+        run: swift test
+
+      - name: Archive binary
+        uses: actions/upload-artifact@v1
+        with:
+          name: postman-linux
+          path: .build/release/Postman
