--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,9 @@ on: [push]
 
 jobs:
   build-mac:
-    runs-on: macos-latest
+    runs-on: macos-11
     env:
-      DEVELOPER_DIR: /Applications/Xcode_13.0.app
+      DEVELOPER_DIR: /Applications/Xcode_13.0.app/Contents/Developer
 
     steps:
       - uses: actions/checkout@v2
